<resources>
    <string name="app_name">SimpleCallConfirm2</string>
    <string name="title_activity_settings">Settings</string>

    <string name="enabled_call_confirm">発信確認の有効/無効</string>
    <string name="main_category_title">詳細設定</string>
    <string name="theme">テーマ</string>
    <string name="fingerprint_confirm">指紋認証による発信確認</string>
    <string name="fingerprint_confirm_summary">発信確認に指紋認証を利用します</string>
    <string name="fingerprint_not_supported">この端末は指紋認証APIをサポートしていません</string>
    <string name="enabled_bluetooth">Bluetooth</string>
    <string name="enabled_bluetooth_summary">対象Bluetooth機器を接続している間は発信確認を無効にします</string>
    <string name="bluetooth_not_supported">この端末はBluetoothをサポートしていません</string>
    <string name="add_bluetooth_device">対象Bluetooth機器の追加</string>
    <string name="remove_bluetooth_device">対象Bluetooth機器の削除</string>

    <string name="add_bluetooth_device_dialog_title">対象Bluetooth機器を選択してください</string>
    <string name="delete_bluetooth_device_dialog_title">削除するBluetooth機器を選択してください</string>
    <string name="bluetooth_device_not_found">対象のBluetooth機器が見つかりませんでした</string>

    <string name="fingerprint_dialog_message">指紋認証で電話発信します</string>
    <string name="fingerprint_dialog_error">指紋認証エラー</string>

    <string name="disable_fingerprint_dialog_title">指紋認証を無効にする</string>
    <string name="disable_fingerprint_dialog_message">無効にするには指紋認証が必要です</string>

    <string name="enabled">有効</string>
    <string name="disabled">無効</string>

    <string name="on">ON</string>
    <string name="off">OFF</string>

    <string name="disable_confirm_message">権限がないため、SimpleCallConfirmを無効にしました</string>
    <string name="please_recall">お手数ですが、再度おかけ直し下さい</string>
    <string name="not_has_enrolled_fingerprints">指紋が登録されていません</string>
    <string name="disable_fingerprint_confirm_message">権限がないため、指紋認証による発信確認をOFFにしました</string>
    <string name="disable_bluetooth_message">権限がないため、BluetoothをOFFにしました</string>

    <string name="main_widget_desc">Simple Call Confirmを有効/無効にします</string>
</resources>
