<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:title="@string/enabled_call_confirm"
        android:summaryOn="@string/enabled"
        android:summaryOff="@string/disabled"
        android:key="call_confirm_enabled"/>
    <PreferenceCategory
        android:dependency="call_confirm_enabled"
        android:title="@string/main_category_title">
        <ListPreference
            android:title="@string/theme"
            android:key="theme"
            android:dialogTitle="@string/theme"/>
        <SwitchPreference
            android:title="@string/fingerprint_confirm"
            android:summaryOn="@string/on"
            android:summaryOff="@string/off"
            android:key="fingerprint_confirm"/>
        <SwitchPreference
            android:title="@string/enabled_bluetooth"
            android:summaryOn="@string/on"
            android:summaryOff="@string/off"
            android:key="bluetooth_enabled"/>
    </PreferenceCategory>
</PreferenceScreen>